core/api/base/all.yaml
---
# Source: co-api/charts/mongodb/templates/standalone/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: co-mongodb
  namespace: production
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-11.1.10
    app.kubernetes.io/instance: co
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
      nodePort: null
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: co
    app.kubernetes.io/component: mongodb
---
# Source: co-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: co
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: co-api
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: co-api-0.0.1
  name: co-co-api
spec:
  ports:
  - name: co-api
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: co
    app.kubernetes.io/name: co-api
  type: ClusterIP
---
# Source: co-api/charts/mongodb/templates/standalone/dep-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: co-mongodb
  namespace: production
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-11.1.10
    app.kubernetes.io/instance: co
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: co
      app.kubernetes.io/component: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        helm.sh/chart: mongodb-11.1.10
        app.kubernetes.io/instance: co
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: mongodb
    spec:
      
      serviceAccountName: co-mongodb
      affinity:
        podAffinity:
          
        podAntiAffinity:
          
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        sysctls: []
      containers:
        - name: mongodb
          image: docker.io/bitnami/mongodb:4.4.13-debian-10-r52
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: mongodb
              containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - |
                  # Run the proper check depending on the version
                  [[ $(mongo --version | grep "MongoDB shell") =~ ([0-9]+\.[0-9]+\.[0-9]+) ]] && VERSION=${BASH_REMATCH[1]}
                  . /opt/bitnami/scripts/libversion.sh
                  VERSION_MAJOR="$(get_sematic_version "$VERSION" 1)"
                  VERSION_MINOR="$(get_sematic_version "$VERSION" 2)"
                  VERSION_PATCH="$(get_sematic_version "$VERSION" 3)"
                  if [[ "$VERSION_MAJOR" -ge 4 ]] && [[ "$VERSION_MINOR" -ge 4 ]] && [[ "$VERSION_PATCH" -ge 2 ]]; then
                      mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.hello().isWritablePrimary || db.hello().secondary' | grep -q 'true'
                  else
                      mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.isMaster().ismaster || db.isMaster().secondary' | grep -q 'true'
                  fi
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: datadir
              mountPath: /bitnami/mongodb
              subPath: 
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: co-mongodb
---
# Source: co-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: co
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: co-api
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: co-api-0.0.1
  name: co-co-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: co
      app.kubernetes.io/name: co-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: co
        app.kubernetes.io/name: co-api
    spec:
      containers:
      - env:
        - name: K8S_SERVICE_PORT
          value: "3000"
        - name: K8S_APP_NAME
          value: co-api
        - name: K8S_RELEASE_NAME
          value: co
        - name: K8S_RELEASE_NAMESPACE
          value: production
        - name: DEBUG
          value: "true"
        - name: MONGODB_PORT
          value: "27017"
        - name: MONGODB_DATABASE
          value: co-api
        - name: MONGODB_USERNAME
          value: co-api
        - name: MONGODB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mongodb-passwords
              name: co-api-mongodb
        - name: SALESFORCE_URL_TOKEN
          value: https://test.salesforce.com
        - name: SALESFORCE_URL_DATA
          value: https://partner.my.salesforce.com
        - name: SALESFORCE_URL_DATA_VERSION
          value: v55.0
        - name: SALESFORCE_USER
          value: api@partner.example
        - name: SALESFORCE_CONSUMER_KEY
          valueFrom:
            secretKeyRef:
              key: consumer-key
              name: co-api-salesforce
        - name: SALESFORCE_CERTIFICATE_KEY
          valueFrom:
            secretKeyRef:
              key: certificate-key
              name: co-api-salesforce
        image: curioushuman/curious-outcomes-api:0.0.1
        imagePullPolicy: IfNotPresent
        name: co-api
        ports:
        - containerPort: 3000
          name: co-api
          protocol: TCP
        resources: {}
        securityContext: {}
      securityContext: {}
      serviceAccountName: co-co-api
---
# Source: co-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/instance: co
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: co-api
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: co-api-0.0.1
  name: co-co-api
spec:
  ingressClassName: nginx
  rules:
  - host: curious-outcomes-api.dev
    http:
      paths:
      - backend:
          service:
            name: co-co-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
